--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,13 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@babel/traverse": "^7.23.9",
     "@fastify/cors": "^8.3.0",
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "5.3.1",
     "ai": "^2.2.13",
     "fastify": "^4.23.2",
     "openai": "^4.7.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   }
 }
