--- a/server/package.json
+++ b/server/package.json
@@ -13,20 +13,22 @@
     "seed": "tsx prisma/seed.ts"
   },
   "devDependencies": {
-    "@types/node": "^20.17.19",
+    "@types/node": "^20.17.23",
     "dotenv": "^16.4.7",
     "prisma": "^5.22.0",
     "tsx": "^3.14.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "@babel/traverse": "^7.26.9",
     "@fastify/cors": "^8.5.0",
-    "@fastify/multipart": "^7.7.3",
+    "@fastify/multipart": "^9.0.3",
     "@prisma/client": "5.3.1",
     "ai": "^2.2.37",
+    "esbuild": "^0.25.0",
     "fastify": "^4.29.0",
-    "openai": "^4.85.4",
+    "nanoid": "^5.1.2",
+    "openai": "^4.86.1",
     "zod": "^3.24.2"
   }
 }
